peac_dev/force-app/main/default/objects/TC_Ocrolus_Upload_File__e/TC_Ocrolus_Upload_File__e.object-meta.xml
<CustomObject>
    <label>TC Ocrolus Upload File</label>
    <pluralLabel>TC Ocrolus Upload Files</pluralLabel>
</CustomObject>