peac_dev/force-app/main/default/objects/TC_Ocrolus_Upload_File__e/fields/Callout_Type__c.field-meta.xml
<CustomField>
    <fullName>Callout_Type__c</fullName>
    <label>Callout Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>