peac_dev/force-app/main/default/objects/TC_Ocrolus_Upload_File__e/fields/Opp_Att_Id__c.field-meta.xml
<CustomField>
    <fullName>Opp_Att_Id__c</fullName>
    <label>Opp Att Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>