peac_dev/force-app/main/default/objects/TC_Ocrolus_Upload_File__e/fields/PK__c.field-meta.xml
<CustomField>
    <fullName>PK__c</fullName>
    <label>PK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>